.tanzu/config/k8sGatewayRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nl-tanzu-java-web-app-route
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: nl-tanzu-java-web-app
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "80"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-nl-tanzu-java-web-app #use https for TLS
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: nl-tanzu-java-web-app
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
